# ChangeLog for dev-python/bcrypt
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/bcrypt/ChangeLog,v 1.16 2015/06/06 20:00:19 jlec Exp $

  06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  03 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

*bcrypt-1.1.1 (26 May 2015)

  26 May 2015; Justin Lecher <jlec@gentoo.org> +bcrypt-1.1.1.ebuild:
  Version Bump

  18 May 2015; Jeroen Roovers <jer@gentoo.org> bcrypt-1.1.0.ebuild:
  Mark ~ppc64 (bug #541682).

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> bcrypt-1.0.2-r1.ebuild,
  bcrypt-1.1.0.ebuild:
  Drop old Python implementations

  24 Mar 2015; Mike Gilbert <floppym@gentoo.org> bcrypt-1.1.0.ebuild:
  cffi is also a build-time dep.

  23 Mar 2015; Mike Gilbert <floppym@gentoo.org> bcrypt-1.1.0.ebuild:
  Using virtual/python-cffi breaks subslot rebuilds, so don't use it.

  23 Mar 2015; Justin Lecher <jlec@gentoo.org> bcrypt-1.1.0.ebuild:
  Convert to virtual/python-cffi

*bcrypt-1.1.0 (17 Feb 2015)

  17 Feb 2015; Justin Lecher <jlec@gentoo.org> +bcrypt-1.1.0.ebuild,
  metadata.xml:
  Version Bump

  06 Jun 2014; Sergey Popov <pinkbyte@gentoo.org> bcrypt-1.0.2-r1.ebuild:
  Stable on amd64 and x86, wrt bug #509828

  20 May 2014; Patrick Lauer <patrick@gentoo.org> bcrypt-1.0.2-r1.ebuild:
  Add mock to test deps

  12 May 2014; Ian Delaney <idella4@gentoo.org> bcrypt-1.0.2-r1.ebuild:
  drop py2.6 add py3.4 support

*bcrypt-1.0.2-r1 (08 May 2014)

  08 May 2014; Michał Górny <mgorny@gentoo.org> +bcrypt-1.0.2-r1.ebuild,
  -bcrypt-1.0.2.ebuild:
  Add a slot operator on dev-python/cffi dep (bug #506552), and make it
  conditional to CPython implementations (PyPy has built-in cffi).

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> bcrypt-1.0.2.ebuild:
  Add support for the new PyPy slotting.
