@@ -1,30 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST bcrypt-1.0.2.tar.gz 39090 SHA256 03c9e8cab644dec13c94a61eccdd930c87d62363f871bfe2ee12421703f27e8b SHA512 cd27897378cf711c6dabc351e30aa063f216133af06a6f9ce63e7cc0f95e0b14cd58806cbf82ad410ca5d5a02adc43be5b76400ae353bf60520f57b76b1bf1a4 WHIRLPOOL 5c15dc34e56f6cfa64aaa30dc182837f1f7bba84906429d1ebee335d3c8d0ed146809bdf766c964e3f5d226082b79148e537b71e6a75fb5f0005178eadb31ef7
-DIST bcrypt-1.1.0.tar.gz 39505 SHA256 4b1986dcbe185c2d95b3b9aea34b5c372743ed826cd10b682eda8512855c11bd SHA512 c9a6445982b5a9a0983a3198b5b92192100fa37b3920e364513744d9af72e99e58599f798ee4d0ff21b6f5c19ecd493e9e7caef9967e543e691f372d605ded3e WHIRLPOOL 701804969199f8759a773e1f6dde6ec3931d3608f650bcf4261ece7b4ecd4cbea046051f4bf99c5b467d58123c447574f856c21133f8b0dd2a8714e9312e6ec3
 DIST bcrypt-1.1.1.tar.gz 39714 SHA256 f68700f4560d90e30b7bb30105b9553000690222887625209aa8a14826ce0461 SHA512 b6388e69dfe4a7a40a304745607fe23fa2cd6c0f874b09c39849958f4d4c77cd5387c2baa79de69e8809c0df8841b085885c83f00bc13ee5a08b3af6c04d721f WHIRLPOOL cc5759ab03c2da11a5b2f3da741957f250eb4b016aa6e5cf3fcc3a28f527219343c321dd432235ec99fc67749edbdb6806d410d6f0ca0afad0c03374ef019b20
+DIST bcrypt-2.0.0.tar.gz 38748 SHA256 8b2d197ef220d10eb74625dde7af3b10daa973ae9a1eadd6366f763fad4387fa SHA512 61ee83c291e65307d1094d4ca80d58f823c04d8389384e33265a3d4d7537ef0846ba07e23ab1c68501851e9b9fc3cc927e0137d52450aee6af938c91c821c435 WHIRLPOOL 46484d780f50a449e5c7d40f37b20b0a9baae4b51a0facb9cb774abddba29d4353c40e274f57c101db572ba778d134d2069180ad8ee73dbef55406aee5560721
 EBUILD bcrypt-1.0.2-r1.ebuild 851 SHA256 97c8d0e3b2525c926877ac5ec772779d151311c4716febf5f4f7dba8a53102e6 SHA512 12debf24780a84d7479b0867f72e5379c8064a864eb581548577b527963f3c853a688f252665d7e8b27f6917cbb015b286008c2620bd798380cddcbfd500d909 WHIRLPOOL 236dbf5156a0e41a70c465a916fe03c4df196d05ae33c72a3b1beb08c4ed22a541342cde92c12891bae426fd6d2cba860c96194b44708b1f18b3c0b3b9e9a196
-EBUILD bcrypt-1.1.0.ebuild 1057 SHA256 fbc9433a821eb03fb4b590bc4e125f8a7682178eca0b530b7aa7dad635b2ed0d SHA512 691ce30249d937471ee181873334d08e90c65d37b52a0a3d7cd5853d0c39d34204e7519f1e5f7db1ba28df57808fbfac9e11adfe8215e3a6f9d2ed28d6f9e712 WHIRLPOOL bdefea0ce48d0d82b70875a486e8af324e635476d8d24a7eb6cbaa0476d6bbdbe0943d11be10865afea7c5564c9dae13556ec04545d2f65f9dee40cd4d6e2ccc
-EBUILD bcrypt-1.1.1.ebuild 1058 SHA256 2fd2377be4390f7e569eb090aaf55c30635d95b822aa5252077a8ee552a95249 SHA512 12a3fc9da29263f0e6176fbbaee3098962fc9da7555319f55ecc70bde94e066043ccd3d29d5c467b0b045aa1550cef430e001d34420c71bfe227cd39a8bf4b43 WHIRLPOOL 62be21640d46fa59dd28a6a119c89a2c1bd395ec7086dd91b480eac5be84f24afdf5d52ba3162f2a95e82c5e28346fe31acfbd9c3600be581d9b30a2e215c5aa
-MISC ChangeLog 2254 SHA256 2985db83467b934428a1242683d664690f49508bc3b38052c7a73047c9efdcd7 SHA512 873118e7ef56ac164eb69c696de7d5c03e68e4c09fe24af84f82b18891cee6a2fbc9c803bd7271e59b8ef6a39a4b8590b640d504a4f0ba6f01f8f5caadde4b1f WHIRLPOOL 2d0d9cef6fb5d3af533116d22d4a55bb9ac31e138c0f53b954ce22b1f4710eefd10ed126294a788dd103e0bb090de10307241acf6caa8b23f5ca108c3db6e476
+EBUILD bcrypt-1.1.1.ebuild 1063 SHA256 fb3722880e21923301ec8d221933c175f43e9e5add8dbd498316c5e43573da29 SHA512 5c5c1534d38a39d8d64c75656dac8dda11728f2cf570584656e2f5983489bbd63c548a95ae3aeee3a0835f15b4886fe1f6a48dfbd70f2cfd2e0a5d1727a4fbf7 WHIRLPOOL 2905a94740a902cc1a1276970d3edaa094f0618ddc2ab6b13651b0f17f222f6898d7e8898b26f286c0f7756676353c446d918bfb29b03287a623b042498e53ae
+EBUILD bcrypt-2.0.0.ebuild 970 SHA256 12cb7531207f6bc9b501643731e80991a0618991284971bb8b9797e4dd755f6c SHA512 78472b325673cbd7ee122f169b087868d83910a57b2a69145466c91173eb1dd596d079cf914ae039eb9f1343daa0636e9f5e9b19d5d056bd461c1f6013f2e5ef WHIRLPOOL 2fb45ea5268d73cfa8677a92dbf074e8250107779c2e5abfe6e3593914a4813e1cac81cc1b2d5a7a256ebc3acdb6cdf4a4332bc3336ca029bce0b95d19d6670c
+MISC ChangeLog 2511 SHA256 2fd606c2f68347a233e3c539ab77dc1301f7fb5e61bbc05d181b7793cc2c117b SHA512 0574924d83ebd44ef7758207c978fc754b7a60574e143b65cad457d49c18cc140c342397c8d365524025db81036092c596b64d10cd1ec765e17958472196e014 WHIRLPOOL eeb6c35378b54178f8ab726004bb4736f9669d03ebf33cbeb8d95fa25e5cc5ea75b8d56c2ccafc0cfdcd51a187b0dad02a6ec9cc66f8bd6a231283d38514445a
 MISC metadata.xml 312 SHA256 2108ecb33039a07519956bb2f572fa22f16bec7d4bcad5e24287116f22613af9 SHA512 a24158415ec5c0d8cab5ac4c1d2a713ee57c9195ff32b7e871db2a1542d466056ecb1ac9b35e3d22dfccb4857bb08db1907e0300c1a5346fe95e9804e2b665ac WHIRLPOOL acb12e00f4329e82d83d280fc25d7403d170248a20bfb7ece63782300fd5060bdea06ed4811335faaea3e3e3431e219935d2126363698635027e91cda636abca
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCgBmBQJVc1FUXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmibOoP/3rcd6aOrpru0KHLmOs8HijN
-KmoekohFXsWC+E4eAtP8Og+bgStLbep5VjAGq1QooA4huFu5aC3jbkTcZNC0NlCM
-g+lQqAzoYklw2GH3PqZVNqKgC0j794u0CxIWSZLou6dPfZWQw7d3fEbBNm3b+EQe
-4zvq84i2jvJDjKujvmSZ52maKxqqEoeRV8K/02FQUgtsbcvR2LxQHhaNqz33WzOR
-C2ihNUcn4wKlpf9oZP8wnpsToiuAhAPVGZgoH/jVFvGTARffXAtkQ5EPlA0RGGa2
-jlpmLjFAgvZML5/mt6jKN9ZU6j9xDYOqkvTEkdFeFQM4VXP3aZEpjn8rjnqViUYT
-0I2GFghoLwgneRzuWe/gf0KltoVwVltt7wkT0daO0oeiLDvMAoOjEYomETfaWP7M
-qXOThMYvpGsEjXeJLWl8yVfaICs44SdSn1meONb18IJlqs9V9SIzJ9IFHeL+yQCI
-aawzJsnDA+Uay6ZsvFt4hK9ThgZxJKeNk13AV/RUDCJyi/ZyrtKpt2yBZcWbsSNJ
-/sX8Znc9PZHyMkPswLmXXGJyx93SxUXdRRBaC3ohN3jNLa68rzU1rZnqcsZU2nRs
-4Uois5p+X5uotK4MByLALjW2aTvHBTXTfMATgCcltoihSwKkMSNlajQgZ59mlr/c
-/MEiTCXzemfwc6tUuk3W
-=dxEb
+iKYEAREIAGYFAlW8SE1fFIAAAAAALgAoaXNzdWVyLWZwckBub3RhdGlvbnMub3Bl
+bnBncC5maWZ0aGhvcnNlbWFuLm5ldDdDQUM1OUY0ODkzMERBREU1NUQ1RjJBRkIy
+OEVDMjEzQjgwNzJCMEQACgkQso7CE7gHKw0sXACfc52XakwIfjNkfJbhl43PcpPQ
+OLwAoLDp7mWiSInh/w8vmLvkPs0SmQQT
+=RI1A
 -----END PGP SIGNATURE-----
