@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bcrypt/bcrypt-1.1.1.ebuild,v 1.1 2015/05/26 16:37:17 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bcrypt/bcrypt-1.1.1.ebuild,v 1.2 2015/08/01 04:17:16 idella4 Exp $
 
 EAPI=5
 
@@ -22,7 +22,7 @@ IUSE="test"
 
 DEPEND="
 	dev-python/setuptools[${PYTHON_USEDEP}]
-	$(python_gen_cond_dep 'dev-python/cffi[${PYTHON_USEDEP}]' 'python*')
+	$(python_gen_cond_dep 'dev-python/cffi:=[${PYTHON_USEDEP}]' 'python*')
 	test? (
 		dev-python/pytest[${PYTHON_USEDEP}]
 		dev-python/mock[${PYTHON_USEDEP}]
