@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bcrypt/bcrypt-1.1.0.ebuild,v 1.6 2015/05/18 05:40:01 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bcrypt/bcrypt-2.0.0.ebuild,v 1.1 2015/08/01 04:17:16 idella4 Exp $
 
 EAPI=5
 
@@ -18,22 +18,15 @@ SRC_URI="
 SLOT="0"
 LICENSE="Apache-2.0"
 KEYWORDS="~amd64 ~ppc64 ~x86"
-IUSE="test"
+IUSE=""
 
 DEPEND="
 	dev-python/setuptools[${PYTHON_USEDEP}]
-	$(python_gen_cond_dep 'dev-python/cffi[${PYTHON_USEDEP}]' 'python*')
-	test? (
-		dev-python/pytest[${PYTHON_USEDEP}]
-		dev-python/mock[${PYTHON_USEDEP}]
-		)"
+	$(python_gen_cond_dep '>=dev-python/cffi-1.1:=[${PYTHON_USEDEP}]' 'python*')
+	"
 RDEPEND="
-	$(python_gen_cond_dep 'dev-python/cffi:=[${PYTHON_USEDEP}]' 'python*')
+	$(python_gen_cond_dep '>=dev-python/cffi-1.1:=[${PYTHON_USEDEP}]' 'python*')
 	>=dev-python/six-1.4.1[${PYTHON_USEDEP}]
 	!dev-python/py-bcrypt"
 
-DISTUTILS_IN_SOURCE_BUILD=1
-
-python_test() {
-	esetup.py test
-}
+# The testsuite is not included in the tarball
