@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/bcrypt
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/bcrypt/ChangeLog,v 1.16 2015/06/06 20:00:19 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/bcrypt/ChangeLog,v 1.17 2015/08/01 04:17:16 idella4 Exp $
+
+*bcrypt-2.0.0 (01 Aug 2015)
+
+  01 Aug 2015; Ian Delaney <idella4@gentoo.org> +bcrypt-2.0.0.ebuild,
+  -bcrypt-1.1.0.ebuild, bcrypt-1.1.1.ebuild:
+  bump; general tidy and update to deps, test phase removed due to absence of
+  testsuite in tarball, rm old
 
   06 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
   Add github to remote-id in metadata.xml
